# FinanceRAG

./: .gitignore  README.md  pyproject.toml
research/: basic_demo.ipynb
